--- a/XWThreads/XWThreads.vcxproj.filters
+++ b/XWThreads/XWThreads.vcxproj.filters
@@ -13,10 +13,18 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files\XWLibrary">
+      <UniqueIdentifier>{4aef9116-4c64-4bc4-a79f-c6fabfbed84c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="XWThreads.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Source\XWThreads.h">
+      <Filter>Source Files\XWLibrary</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
