Add XWFunction implementation

--- a/XWThreads/XWThreads.vcxproj
+++ b/XWThreads/XWThreads.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Source\XWFunction.h" />
     <ClInclude Include="Source\XWThreads.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
