Add comments & reorganize structure

--- a/XWThreads/XWThreads.vcxproj
+++ b/XWThreads/XWThreads.vcxproj
@@ -151,11 +151,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="Source\XWFunction.h" />
     <ClInclude Include="Source\XWThreads.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Demo\main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
